--- a/商品详情.html
+++ b/商品详情.html
@@ -1174,59 +1174,59 @@
                                         </div>
                                       </div>
                                     </div>
+
+                                    <!-- Unnamed (矩形) -->
+                                    <div id="u3892" class="ax_default label">
+                                      <div id="u3892_div" class=""></div>
+                                      <!-- Unnamed () -->
+                                      <div id="u3893" class="text" style="visibility: visible;">
+                                        <p><span>除了点击导航可切换菜单，左右滑动时也可切换菜单</span></p>
+                                      </div>
+                                    </div>
                                   </div>
                                 </div>
                               </div>
 
                               <!-- Unnamed (组合) -->
-                              <div id="u3892" class="ax_default">
+                              <div id="u3894" class="ax_default">
 
                                 <!-- Unnamed (组合) -->
-                                <div id="u3893" class="ax_default">
+                                <div id="u3895" class="ax_default">
 
                                   <!-- Unnamed (矩形) -->
-                                  <div id="u3894" class="ax_default label">
-                                    <div id="u3894_div" class=""></div>
+                                  <div id="u3896" class="ax_default label">
+                                    <div id="u3896_div" class=""></div>
                                     <!-- Unnamed () -->
-                                    <div id="u3895" class="text" style="visibility: visible;">
+                                    <div id="u3897" class="text" style="visibility: visible;">
                                       <p><span>户外手提音箱</span></p>
                                     </div>
                                   </div>
 
                                   <!-- Unnamed (矩形) -->
-                                  <div id="u3896" class="ax_default box_2">
-                                    <div id="u3896_div" class=""></div>
+                                  <div id="u3898" class="ax_default box_2">
+                                    <div id="u3898_div" class=""></div>
                                     <!-- Unnamed () -->
-                                    <div id="u3897" class="text" style="display: none; visibility: hidden">
+                                    <div id="u3899" class="text" style="display: none; visibility: hidden">
                                       <p><span></span></p>
                                     </div>
                                   </div>
 
                                   <!-- Unnamed (动态面板) -->
-                                  <div id="u3898" class="ax_default">
-                                    <div id="u3898_state0" class="panel_state" data-label="State1">
-                                      <div id="u3898_state0_content" class="panel_state_content">
+                                  <div id="u3900" class="ax_default">
+                                    <div id="u3900_state0" class="panel_state" data-label="State1">
+                                      <div id="u3900_state0_content" class="panel_state_content">
 
                                         <!-- Unnamed (动态面板) -->
-                                        <div id="u3899" class="ax_default">
-                                          <div id="u3899_state0" class="panel_state" data-label="State1">
-                                            <div id="u3899_state0_content" class="panel_state_content">
-
-                                              <!-- Unnamed (矩形) -->
-                                              <div id="u3900" class="ax_default label">
-                                                <div id="u3900_div" class=""></div>
-                                                <!-- Unnamed () -->
-                                                <div id="u3901" class="text" style="visibility: visible;">
-                                                  <p><span>展示时间</span></p>
-                                                </div>
-                                              </div>
+                                        <div id="u3901" class="ax_default">
+                                          <div id="u3901_state0" class="panel_state" data-label="State1">
+                                            <div id="u3901_state0_content" class="panel_state_content">
 
                                               <!-- Unnamed (矩形) -->
                                               <div id="u3902" class="ax_default label">
                                                 <div id="u3902_div" class=""></div>
                                                 <!-- Unnamed () -->
                                                 <div id="u3903" class="text" style="visibility: visible;">
-                                                  <p><span>2020-01-04</span></p>
+                                                  <p><span>展示时间</span></p>
                                                 </div>
                                               </div>
 
@@ -1235,7 +1235,7 @@
                                                 <div id="u3904_div" class=""></div>
                                                 <!-- Unnamed () -->
                                                 <div id="u3905" class="text" style="visibility: visible;">
-                                                  <p><span>流量类型</span></p>
+                                                  <p><span>2020-01-04</span></p>
                                                 </div>
                                               </div>
 
@@ -1244,7 +1244,7 @@
                                                 <div id="u3906_div" class=""></div>
                                                 <!-- Unnamed () -->
                                                 <div id="u3907" class="text" style="visibility: visible;">
-                                                  <p><span>8345976</span></p>
+                                                  <p><span>流量类型</span></p>
                                                 </div>
                                               </div>
 
@@ -1253,7 +1253,7 @@
                                                 <div id="u3908_div" class=""></div>
                                                 <!-- Unnamed () -->
                                                 <div id="u3909" class="text" style="visibility: visible;">
-                                                  <p><span>排名</span></p>
+                                                  <p><span>8345976</span></p>
                                                 </div>
                                               </div>
 
@@ -1262,7 +1262,7 @@
                                                 <div id="u3910_div" class=""></div>
                                                 <!-- Unnamed () -->
                                                 <div id="u3911" class="text" style="visibility: visible;">
-                                                  <p><span>1.37%</span></p>
+                                                  <p><span>排名</span></p>
                                                 </div>
                                               </div>
 
@@ -1271,7 +1271,7 @@
                                                 <div id="u3912_div" class=""></div>
                                                 <!-- Unnamed () -->
                                                 <div id="u3913" class="text" style="visibility: visible;">
-                                                  <p><span>转化击率</span></p>
+                                                  <p><span>1.37%</span></p>
                                                 </div>
                                               </div>
 
@@ -1280,7 +1280,7 @@
                                                 <div id="u3914_div" class=""></div>
                                                 <!-- Unnamed () -->
                                                 <div id="u3915" class="text" style="visibility: visible;">
-                                                  <p><span>1.37%</span></p>
+                                                  <p><span>转化击率</span></p>
                                                 </div>
                                               </div>
 
@@ -1289,7 +1289,7 @@
                                                 <div id="u3916_div" class=""></div>
                                                 <!-- Unnamed () -->
                                                 <div id="u3917" class="text" style="visibility: visible;">
-                                                  <p><span>竞争强度</span></p>
+                                                  <p><span>1.37%</span></p>
                                                 </div>
                                               </div>
 
@@ -1298,7 +1298,7 @@
                                                 <div id="u3918_div" class=""></div>
                                                 <!-- Unnamed () -->
                                                 <div id="u3919" class="text" style="visibility: visible;">
-                                                  <p><span>直通车参考价</span></p>
+                                                  <p><span>竞争强度</span></p>
                                                 </div>
                                               </div>
 
@@ -1307,7 +1307,7 @@
                                                 <div id="u3920_div" class=""></div>
                                                 <!-- Unnamed () -->
                                                 <div id="u3921" class="text" style="visibility: visible;">
-                                                  <p><span>17</span></p>
+                                                  <p><span>直通车参考价</span></p>
                                                 </div>
                                               </div>
 
@@ -1316,6 +1316,15 @@
                                                 <div id="u3922_div" class=""></div>
                                                 <!-- Unnamed () -->
                                                 <div id="u3923" class="text" style="visibility: visible;">
+                                                  <p><span>17</span></p>
+                                                </div>
+                                              </div>
+
+                                              <!-- Unnamed (矩形) -->
+                                              <div id="u3924" class="ax_default label">
+                                                <div id="u3924_div" class=""></div>
+                                                <!-- Unnamed () -->
+                                                <div id="u3925" class="text" style="visibility: visible;">
                                                   <p><span>1.29</span></p>
                                                 </div>
                                               </div>
@@ -1329,11 +1338,11 @@
                               </div>
 
                               <!-- Unnamed (热区) -->
-                              <div id="u3924" class="ax_default">
+                              <div id="u3926" class="ax_default">
                               </div>
 
                               <!-- Unnamed (热区) -->
-                              <div id="u3925" class="ax_default">
+                              <div id="u3927" class="ax_default">
                               </div>
                             </div>
                           </div>
